<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GrabarAudioFragment">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grabadora_audio"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_grabar"
        android:enabled="true"
        android:text="@string/grabar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_stop"
        android:enabled="false"
        android:text="@string/stop"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_play"
        android:enabled="false"
        android:text="@string/play"/>
</LinearLayout>